<package>
	<name>OpenFace</name>
	<version>0.0.1</version>
	<description>The feature extraction package</description>
	<maintainer email="agarwalaks30@gmail.com">Akshat Agarwal</maintainer>
	<license>MIT</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>std_msgs</build_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>std_msgs</run_depend>
	<build_depend>openface_msgs</build_depend>
	<run_depend>openface_msgs</run_depend>
	<build_depend>message_generation</build_depend>
	<run_depend>message_runtime</run_depend>
</package>